--- a/Fuentes/CovidExamenes/app/src/main/res/layout/activity_main.xml
+++ b/Fuentes/CovidExamenes/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,56 @@ android:layout_height="match_parent"
 android:orientation="vertical"
 tools:context=".MainActivity">
 
-<include layout="@layout/toolbar"></include>
 
-<ListView
-    android:id="@+id/pacientes_lv"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"></ListView>
+
+ <LinearLayout
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:orientation="horizontal">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="25sp"
+            android:text="Nombre"></TextView>
+
+        <EditText
+            android:id="@+id/idNombreTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Ingrese Nombre"></EditText>
+ </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:text="Contraseña"></TextView>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textPassword" ></EditText>
+    </LinearLayout>
+
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Iniciar Sesión"
+        android:id="@+id/segundo_btn"></Button>
+
+
+
+
+
 
 </LinearLayout>
