--- a/Fuentes/CovidExamenes/app/src/main/res/layout/activity_tercer.xml
+++ b/Fuentes/CovidExamenes/app/src/main/res/layout/activity_tercer.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tercerActivity">
+    tools:context=".TercerActivity"
+    android:orientation="vertical">
+    <include layout="@layout/toolbar"></include>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Eliga una Opción"
+        android:textSize="@dimen/titulo_app_size"
+        android:textColor="@color/colorPrimary"></TextView>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Listado Pacientes"
+        android:id="@+id/segundo_btn"></Button>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Registrar Paciente"
+        android:id="@+id/cuarto_btn"></Button>
+
+</LinearLayout>
