--- a/Fuentes/CovidExamenes/app/src/main/res/layout/activity_segundo.xml
+++ b/Fuentes/CovidExamenes/app/src/main/res/layout/activity_segundo.xml
@@ -7,7 +7,11 @@
     android:orientation="vertical"
     tools:context=".SegundoActivity">
 
+
+
+
     <include layout="@layout/toolbar"></include>
+
 
 
     <TextView
@@ -15,13 +19,28 @@
         android:layout_height="wrap_content"
         android:text="Lista de Pacientes"
         android:textSize="@dimen/titulo_app_size"
+        android:layout_weight="1"
         android:textColor="@color/colorPrimary"></TextView>
+
+
+
+
 
     <ListView
         android:id="@+id/pacientes_lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></ListView>
 
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:contentDescription="jeje"
+        android:src="@drawable/mas" />
 
 
 
