--- a/Fuentes/CovidExamenes/app/src/main/res/layout/activity_cuarto.xml
+++ b/Fuentes/CovidExamenes/app/src/main/res/layout/activity_cuarto.xml
@@ -163,6 +163,12 @@
             android:text="Presenta sintomas de covid?"
             android:textSize="20dp"></TextView>
 
+        <Switch
+            android:id="@+id/idSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onclick"></Switch>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -176,6 +182,14 @@
             android:layout_weight="1"
             android:text="Temperatura"
             android:textSize="20dp"></TextView>
+
+        <EditText
+            android:id="@+id/idTemp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="numberDecimal"
+            ></EditText>
 
     </LinearLayout>
     <LinearLayout
@@ -191,6 +205,12 @@
             android:text="Presenta tos?"
             android:textSize="20dp"></TextView>
 
+        <Switch
+            android:id="@+id/idSwitch2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onclick2"></Switch>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -204,6 +224,14 @@
             android:layout_weight="1"
             android:text="Presión arterial"
             android:textSize="20dp"></TextView>
+
+        <EditText
+            android:id="@+id/idPresion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="number"
+            ></EditText>
 
     </LinearLayout>
 
